# multi-language-bazel-monorepo

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  go.mod  go_deps.bzl  maven_install.json  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: bazoku_deploy.yml  main.yml
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_greeter/: BUILD.bazel  greeter.go  greeter_test.go
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  Dockerfile  container_test.yaml  main.go
projects/greeter/: BUILD.bazel  greeter.go  greeter_test.go
projects/java_greeter/src.main.java/com/kriscfoster/java_greeter/greeter/: BUILD.bazel  Greeter.java
projects/java_greeter/src.main.java/com/kriscfoster/java_greeter/main/: BUILD.bazel  Main.java
projects/java_greeter/src/main/java/com/kriscfoster/greeter/: BUILD.bazel  Greeter.java
projects/java_greeter/src/main/java/com/kriscfoster/javagreeter/greeter/: BUILD.bazel  Greeter.java
projects/java_greeter/src/main/java/com/kriscfoster/javagreeter/main/: BUILD.bazel  Main.java
projects/java_greeter/src/main/java/com/kriscfoster/main/: BUILD.bazel  Main.java
projects/java_greeter/src/test/java/com/kriscfoster/javagreeter/greeter/: BUILD.bazel  GreeterTest.java
projects/my-go-app/: BUILD.bazel  main.go
projects/my-python-app/: BUILD.bazel  main.py
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
projects/python/: BUILD.bazel  main.py
projects/python/calculator/: BUILD.bazel  calculator_test.py
projects/python_calculator/: BUILD.bazel  calculator.py
projects/python_web/: BUILD.bazel  python_web.py
projects/react_app/: BUILD.bazel  README.md  package-lock.json  package.json
projects/simple-go-app/: BUILD.bazel
projects/ts_app/: BUILD.bazel  calculator.ts  index.ts
