load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_hello_world",
    importpath = "github.com/kriscfoster/multi-language-bazel-monorepo/projects/go_hello_world",
    srcs = ["hello_world.go"],
    visibility = ["//projects/go_web:__pkg__"],
)

go_test(
  name = "go_hello_world_test",
  srcs = ["hello_world_test.go"],
  embed = [":go_hello_world"]
)
