load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "greeter",
    importpath = "github.com/kriscfoster/multi-language-bazel-monorepo/projects/greeter",
    srcs = ["greeter.go"],
    visibility = ["//projects/my-go-app:__pkg__"],
)

go_test(
  name = "greeter_test",
  srcs = ["greeter_test.go"],
  embed = [":greeter"]
)
