load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

js_library(
    name = "node_calculator",
    srcs = ["calculator.js"],
    visibility = ["//projects/node_web:__pkg__"],
)

jasmine_node_test(
    name = "calculator_test",
    srcs = ["calculator.spec.js"],
    data = [
      ":node_calculator",
    ]
)
