load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

js_library(
    name = "node_calculator",
    srcs = ["calculator.js"],
    visibility = ["//projects/node_web:__pkg__"],
)

jest_test(
    name = "calculator_test",
    data = [
        "calculator.spec.js",
        ":node_calculator",
    ],
    node_modules = "//:npm",
)
