load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")
load("@aspect_rules_js//js:defs.bzl", "js_library", "js_binary", "js_image_layer")

# nodejs_image(
#     name = "node_web_image",
#     binary = "node_web",
#     include_node_repo_args = False,
#     node_repository_name = "nodejs_linux_amd64",
# )

js_binary(
    name = "node_web",
    data = [
        "//projects/node_calculator",
        "//:npm/express",
    ],
    entry_point = ":index.js",
)

js_image_layer(
    name = "layers",
    binary = ":node_web",
    root = "/app",
)

filegroup(
    name = "app_tar",
    srcs = [":layers"],
    output_group = "app",
)

container_layer(
    name = "app_layer",
    tars = [":app_tar"],
)

filegroup(
    name = "node_modules_tar",
    srcs = [":layers"],
    output_group = "node_modules",
)

container_layer(
    name = "node_modules_layer",
    tars = [":node_modules_tar"],
)

container_image(
    name = "node_web_image",
    # base = DEFAULT_BASE_DOCKER_IMAGE,
        entrypoint = ["bash"],
    cmd = ["/app/projects/node_web/node_web"],
    layers = [
        ":app_layer",
        ":node_modules_layer",
    ],
)