load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

js_binary(
    name = "node_web",
    data = [
        "//projects/node_calculator",
        "//:npm/express",
    ],
    entry_point = ":index.js",
)

js_image_layer(
    name = "layers",
    binary = ":node_web",
    root = "/app",
)

oci_image(
    name = "oci_image",
    # js_binary depends on bash so we have to use a base image that has bash
    base = "@debian_base",
    cmd = ["/app/projects/node_web/node_web"],
    entrypoint = ["bash"],
    tars = [
        ":layers",
    ],
)

oci_tarball(
    name = "oci_tarball",
    image = ":oci_image",
    repo_tags = ["projects/node_web:oci_tarball"],
)
